HP-2006-12-13-0: Bugfix:    Added needs for test from checkin HP-2006-12-12-0

RD-2006-12-12-0: Bugfix:    Fixed qquota test
                 Review:    JG

HP-2006-12-12-0: Enhancem:  Added test for SGE_Helper_Sevice
                 Review:    JG

JG-2006-12-12-0: Cleanup:   Removed globals and set_error from all remaining files.

JG-2006-12-11-0: Cleanup:   Removed globals and set_error from performance checks and
                            system_tests/clients.

AH-2006-12-11-0: Enhancem.: New test to ensure Dtrace monitor works on 
                            S10 machines
                 Review:    RD

AA-2006-12-08-0: Cleanup:   arco_checktree fixes

JG-2006-12-08-0: Cleanup:   Removed globals and set_error from functional checks.

JG-2006-12-07-1: Bugfix:    Fixed error handling for setup/cleanup functions.
                            Compile timeout was too low for jgdi build.
                 Cleanup:   Removed globals and set_error from bugs/issuezilla
                            checks.

JG-2006-12-07-0: Bugfix:    Fixed a TCL error introduced by JG-2006-12-06-0.
                            Fixed installation of SGE 6.0, 6.0u1, 6.0u2, ...
                 Review:    RD

AA-2006-12-07-0: Cleanup:   arco jtestcase removal

JG-2006-12-06-0: Enhancem.: The set_error call is no longer needed.
                            Cleanup in testsuite framework starting checks.
                            Eliminate set_error from checks (step 1).
                 Issue:     10
                 Review:    RD

JG-2006-12-04-0: Bugfix:    Opening connections to windows hosts as non 
                            domain CHECK_USER was broken due to 
                            JG-2006-11-30-0.
                 Review:    HP

CR-2006-12-04-0: Enhancem.: Added test for "hostname resolving should not
                            be case sensitive"
                 Review:    RD

JG-2006-12-01-1: Enhancem.: Build libdrmaa.jar with SGE 6.0.
                 Issue:     73