@@ -1,3 +1,7 @@
+JG-2006-12-13-0: Enhancem:  Added script to find deprecated globals / procedure calls.
+                 Cleanup:   Removed deprecated globals from dtrace test.
+                 Review:    RD
+
 HP-2006-12-13-0: Bugfix:    Added needs for test from checkin HP-2006-12-12-0
 
 RD-2006-12-12-0: Bugfix:    Fixed qquota test
